--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.43.1",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2"
+    "ejs": "^3.1.10",
+    "express": "^4.19.2",
+    "express-session": "^1.18.0",
+    "pg": "^8.11.5"
   }
 }
