--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "ejs": "^3.1.10",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
-    "pg": "^8.11.5"
+    "pg": "^8.11.5",
+    "serve-favicon": "^2.5.0"
   }
 }
