--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
+    "express-session": "^1.18.0",
     "papaparse": "^5.4.1",
     "pg": "^8.11.5"
   }
